fix: text wrap in the Display component

--- a/src/components/Display.css
+++ b/src/components/Display.css
@@ -7,5 +7,8 @@
   align-items: center;
   padding: 20px;
   font-size: 2.1em;
+  line-height: 1.8rem;
   overflow: hidden;
+  overflow-wrap: anywhere;
+  text-align: right;
 }
